TFP-5430: Refaktorering * Splitter beskrivelse på header og "VL: " * Egen Dokument i OppgaveDto * Samler dokumentene i én liste og sorterer alfabetisk * Generell refaktorering